# cirf

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CIRF.cmake  CIRFAddResources.cmake  CIRFConfig.cmake  CIRFConfigVersion.cmake.in  CIRFGenerateResources.cmake
docs/: ARCHITECTURE.md  CONFIG.md
esp-idf/cirf/: CMakeLists.txt  cirf_idf.cmake
examples/: CMakeLists.txt
examples/esp32/: CMakeLists.txt  README.md  resources.json  sdkconfig.defaults
examples/esp32/main/: CMakeLists.txt  main.c
examples/esp32/main/resources/: index.html
examples/esp32/main/resources/api/: config.json
examples/esp32/main/resources/css/: style.css
examples/simple/: CMakeLists.txt  README.md  main.c  resources.json
examples/simple/resources/: data.json  hello.txt
idf_component/: CMakeLists.txt  Kconfig
include/cirf/: codegen.h  config.h  error.h  glob.h  json.h  mime.h  runtime.h  types.h  version.h  vfs.h  writer.h
src/: codegen.c  config.c  error.c  glob.c  json.c  main.c  mime.c  runtime.c  vfs.c  writer.c
